--- a/sources/spring-server/src/main/resources/application.properties
+++ b/sources/spring-server/src/main/resources/application.properties
@@ -3,3 +3,28 @@ server.contextPath=/api
 server.port=8080
 spring.jackson.date-format=ch.heigvd.gamification.RFC3339DateFormat
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
+
+## Database setup
+##spring.datasource.url=jdbc:mysql://192.168.99.100:3306/gamification
+##spring.datasource.username=root
+##spring.datasource.password=adminpw
+##spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+# Keep the connection alive if idle for a long time (needed in production)
+##spring.datasource.testWhileIdle = true
+##spring.datasource.validationQuery = SELECT 1
+
+# Show or not log for each sql query
+##spring.jpa.show-sql = true
+
+# Hibernate ddl auto (create, create-drop, update)
+##spring.jpa.hibernate.ddl-auto = update
+
+# Naming strategy
+##spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+
+# Use spring.jpa.properties.* for Hibernate native properties (the prefix is
+# stripped before adding them to the entity manager)
+
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+##spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
