--- a/topology-amt/docker-compose.yml
+++ b/topology-amt/docker-compose.yml
@@ -14,3 +14,7 @@ services:
      - "6060:80"
     links:
      - mysql:db
+  springserver:
+    build: ../images/springserver
+    ports:
+     - "8080:8080"
