--- a/topology-amt/docker-compose.yml
+++ b/topology-amt/docker-compose.yml
@@ -18,3 +18,11 @@ services:
     build: ../images/springserver
     ports:
      - "8080:8080"
+    links:
+     - mysql:db
+  demoapplication:
+    build: ../images/demoapplication
+    ports:
+     - "80:80"
+    links:
+     - springserver:gamificationserver
